--- a/_sass/layout/_posts.scss
+++ b/_sass/layout/_posts.scss
@@ -1,9 +1,9 @@
 .Posts {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
 }
 
 .Post {
-  max-width: 860px;
+  max-width: 38rem;
   margin: 0 auto;
   h2,
   h3,
